--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "-Social-Network-API",
   "version": "1.0.1",
   "description": "Mongoose back-end project - Develop",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "seed": "node utils/seed",
     "heroku-postbuild": "node utils/seed.js"
   },
